video linked to nav and index page

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,4 +1,7 @@
 main:
+  - name: "Video"
+    url: "https://www.youtube.com/watch?v=9nKfe56py3A"
+    weight: 2
   - name: "Github"
     url: "https://github.com/pylon-lib/pylon"
     weight: 2
